# pg_lake

./: build-pg-lake-copy.sh
.github/: build-deb.sh
.github/workflows/: package.yml
docker/: Dockerfile
duckdb_pglake/: CMakeLists.txt  Makefile  extension_config.cmake  vcpkg-no-azure.json
duckdb_pglake/patches/aws/: source_profile_role_chaining.patch
duckdb_pglake/src/: duckdb_pglake_extension.cpp
duckdb_pglake/src/fs/: functions.cpp
duckdb_pglake/vcpkg-no-azure/: vcpkg.json
pg_extension_base/: Makefile
pg_extension_base/include/pg_extension_base/: base_workers.h
pg_extension_base/src/: base_worker_launcher.c
pg_extension_base/tests/pg_extension_base_test_oneshot/: Makefile  pg_extension_base_test_oneshot--1.0.sql  pg_extension_base_test_oneshot.control
pg_extension_base/tests/pg_extension_base_test_oneshot/src/: pg_extension_base_oneshot.c
pg_extension_base/tests/pytests/: test_base_worker_launcher.py  test_library_preloader.py
pg_lake_copy/: pg_lake_copy--3.0.sql  pg_lake_copy--3.2--3.3.sql
pg_lake_copy/src/copy/: copy.c
pg_lake_copy/tests/pytests/: test_cancellation.py
pg_lake_engine/src/copy/: copy_format.c
pg_lake_engine/src/csv/: csv_writer.c
pg_lake_engine/src/pgduck/: iceberg_datum_validation.c  iceberg_query_validation.c  iceberg_validation.c  numeric.c  write_data.c
pg_lake_engine/src/utils/: rel_utils.c  string_utils.c
pg_lake_iceberg/src/iceberg/: catalog.c  data_file_stats.c
pg_lake_iceberg/src/object_store_catalog/: object_store_catalog.c
pg_lake_spatial/tests/pytests/: test_iceberg_unsupported_types.py
pg_lake_table/src/: init.c
pg_lake_table/src/ddl/: create_table.c
pg_lake_table/src/fdw/: data_files_catalog.c  pg_lake_table.c  writable_table.c
pg_lake_table/src/planner/: insert_select.c
pg_lake_table/src/transaction/: external_heavy_asserts.c  track_iceberg_metadata_changes.c
pg_lake_table/tests/pytests/: test_copy_on_write_max_delete_rows.py  test_create_iceberg_table_load_from.py  test_create_table.py  test_float_roundtrip.py  test_iceberg_copy_from_pushdown.py  test_iceberg_types.py  test_iceberg_validation.py  test_insert_select_pushdown.py  test_numeric_not_supported_by_duckdb.py  test_polaris_catalog_writable.py  test_set_operation_pushdown.py  test_unsupported_numeric_as_double.py
pgduck_server/: Makefile
pgduck_server/src/duckdb/: duckdb.c
pgduck_server/src/utils/: numutils.c
pgduck_server/tests/pytests/: test_types.py
test_common/helpers/: explain.py
(+9 files in other folders)
